Linking Materials causes Regular Materials to be used in Grease Pencil #84420

Closed
opened 2021-01-05 17:43:49 +01:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: 2.91 release, 2.92.0 alpha 9b17e71c23
Worked: ?

Short description of error
Using the Make Links > Materials operation, a regular material can be set on a Grease Pencil object.
This can cause crashes, for example on drawing with such a materials selected.

Instead, linking a regular material to a Grease Pencil object should not be possible.

Exact steps for others to reproduce the error
grease_pencil_link_materials.blend

  1. Press Ctrl + L, select Materials
  2. Select the Grease Pencil object. The first material slot will display an empty line. Selecting it shows the Principled Shader.
**System Information** Operating system: Windows 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: 2.91 release, 2.92.0 alpha 9b17e71c23a9 Worked: ? **Short description of error** Using the *Make Links* > *Materials* operation, a regular material can be set on a Grease Pencil object. This can cause crashes, for example on drawing with such a materials selected. Instead, linking a regular material to a Grease Pencil object should not be possible. **Exact steps for others to reproduce the error** [grease_pencil_link_materials.blend](https://archive.blender.org/developer/F9551574/grease_pencil_link_materials.blend) 1. Press Ctrl + L, select *Materials* 2. Select the Grease Pencil object. The first material slot will display an empty line. Selecting it shows the Principled Shader.

Added subscriber: @Foaly

Added subscriber: @Foaly
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this. The material does get linked. Drawing with that material or changing the settings in the material seems to override it with a GP material. On the cube, this causes a python error

Python: Traceback (most recent call last):

File "/.../blender-git/build_linux/bin/2.92/scripts/startup/bl_ui/properties_grease_pencil_common.py", line 602, in draw
if ob.data.use_stroke_edit_mode:

AttributeError: 'Mesh' object has no attribute 'use_stroke_edit_mode'

I would consider this to be a bug.

I can reproduce this. The material does get linked. Drawing with that material or changing the settings in the material seems to override it with a GP material. On the cube, this causes a python error ```location: <unknown location>:-1 Python: Traceback (most recent call last): ``` File "/.../blender-git/build_linux/bin/2.92/scripts/startup/bl_ui/properties_grease_pencil_common.py", line 602, in draw if ob.data.use_stroke_edit_mode: ``` AttributeError: 'Mesh' object has no attribute 'use_stroke_edit_mode' ``` I would consider this to be a bug.
Falk David self-assigned this 2021-01-06 11:12:51 +01:00

This issue was referenced by 5cdf279ef4

This issue was referenced by 5cdf279ef46fa8672d086d1f57025e31f477accc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84420
No description provided.